feat: discover nodes from a specific peer
